# thelake

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  PERFORMANCE_ANALYSIS.md  PERFORMANCE_FIXES_SUMMARY.md  README.md  TESTING.md  VERIFYING_DATA.md  build.sh  config-aws-benchmark.yaml  config-aws-ec2-perf.yaml  config-gcs-benchmark.yaml  config-local-s3-test.yaml  config.container-ducklake-test.yaml  config.yaml  docker-compose.yml  test_deployment.py  trino_password.txt
.cargo/: config.toml
.github/workflows/: performance-tests.yml
docs/: aws_benchmark_guide.md  aws_benchmark_troubleshooting.md  decision_log.md  design-review-feedback-addressed.md  design-review-feedback-v1.2.md  design-review-feedback-v1.3.md  design-review-feedback-v1.4.md  design-review-feedback-v1.5.md  design-review-feedback-v1.6.md  design-review-feedback-v1.7.md  design-review-feedback-v1.8.md  design-review-feedback-v1.9.md  design-review-feedback-v2.0.md  design-review-feedback-v2.1.md  design.md  gcs_benchmark_guide.md  goals.md  grafana.md  ingestion-openapi.yaml  instrumentation_guide.md  migration-to-iceberg-design-review-checklist.md  migration-to-iceberg-design.md  mongodb-query-parameters-analysis.md  mongodb-timeseries-optimization-design.md  query-patterns-data-payload-separation.md  recording-query-client-plan.md  replay-design.md  storage_design.md  wal-optimization-results.md
grafana/provisioning/dashboards/: otlp-overview.json
grafana/provisioning/datasources/: duckdb.yml
openspec/: project.md
openspec/changes/add-dropdown-metadata-catalog/: design.md  proposal.md  tasks.md
openspec/changes/add-dropdown-metadata-catalog/specs/filter-catalog/: spec.md
openspec/changes/add-iceberg-otlp-migration/: design.md  proposal.md  tasks.md
openspec/changes/add-iceberg-otlp-migration/specs/compatibility/: spec.md
openspec/changes/add-iceberg-otlp-migration/specs/ingestion/: spec.md
openspec/changes/add-iceberg-otlp-migration/specs/metadata/: spec.md
openspec/changes/add-iceberg-otlp-migration/specs/query/: spec.md
openspec/changes/add-iceberg-otlp-migration/specs/storage/: spec.md
openspec/changes/migrate-to-ducklake/: design.md  proposal.md  tasks.md
openspec/changes/migrate-to-ducklake/specs/ingest-engine/: spec.md
openspec/changes/migrate-to-ducklake/specs/query-engine/: spec.md
openspec/changes/migrate-to-ducklake/specs/storage-engine/: spec.md
openspec/changes/replace-iceberg-ingest-engine/: design.md  proposal.md  tasks.md
openspec/changes/replace-iceberg-ingest-engine/specs/ingest-engine/: spec.md
openspec/changes/replace-iceberg-ingest-engine/specs/query-engine/: spec.md
openspec/changes/replace-iceberg-ingest-engine/specs/storage-engine/: spec.md
scripts/: README.md  TEST_RESULTS.md  aws_benchmark.sh  benchmark_gcs_server.sh  coverage-docker.sh  demo_session_queries.sh  drop_all_tables.sh  ec2_run_perf_stress.sh  ec2_start_splake.sh  ec2_sync_build.sh  generate_telemetry.py  interactive_query.sh  interactive_query_ducklake_production.sh  manual_test_guide.md  perf_duckdb_union_read.sh  safe_aws_test.sh  telemetrygen_hosted.sh  test-setup.sh  test_iceberg_syntax.sql  test_query.sh  verify_e2e.sh  verify_iceberg.sql  verify_quick.sh  verify_session.sql
src/: authn.rs  capture_export.rs  config.rs  grpc_otlp.rs  hosted.rs  inject.rs  lib.rs  main.rs  session_redis.rs  test_support.rs
src/api/: health.rs  ingestion.rs  ingestion_test.rs  mod.rs  query.rs  unit_tests.rs
src/api/ingestion/: logs.rs  metrics.rs  mod.rs  traces.rs
src/catalog/: dropdown.rs  mod.rs
src/compaction/: executor.rs  mod.rs  scheduler.rs
src/ingest_engine/: fs.rs  mod.rs  wal.rs
src/models/: log.rs  metric.rs  mod.rs  span.rs
src/query/: cache.rs  duckdb.rs  mod.rs  next.txt
src/query/sql/: duckdb_cache_httpfs_init.sql  duckdb_session_init.sql
src/storage/: buffer.rs  buffer_e2e_test.rs  iceberg.rs  mod.rs  schema.rs  span_buffer.rs  span_buffer_test.rs  transaction.rs
src/storage/ducklake/: mod.rs
src/storage/iceberg/: arrow.rs  catalog.rs  mod.rs  tables.rs  writer.rs
tests/: iceberg_integration_test.rs  integration_perf.rs  integration_test.rs  metrics_integration_test.rs  performance_test.rs  tests.rs
tests/config/: test-docker.yaml  test-gcp.yaml  test-r2.yaml  test.yaml
tests/integration/: authn_contract.rs  http_api.rs  iceberg.rs  integration.rs  metrics.rs  mod.rs  performance.rs  schema_promotion.rs  schema_promotion_unit.rs
tests/util/: config.rs  http.rs  iceberg.rs  mod.rs  otlp.rs  perf.rs  pipeline.rs  poll.rs
