[package]
name = "softprobe-runtime"
version = "0.1.0"
edition = "2021"
authors = ["SoftProbe Team"]
description = "Softprobe runtime: OTLP ingest (HTTP + gRPC), query, Iceberg, and control API"
license = "Apache-2.0"
repository = "https://github.com/softprobe/hybrid"

[dependencies]
# HTTP Server
axum = { version = "0.8.6", features = ["json", "multipart", "macros", "tokio"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "decompression-gzip", "decompression-deflate", "decompression-br", "decompression-zstd"] }

# Async Runtime
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"

# OpenTelemetry Protocol
opentelemetry-proto = { version = "0.7", features = ["gen-tonic", "trace", "metrics", "logs"] }
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["gzip"] }

# Iceberg (optional integration via feature)
iceberg = { version = "0.9", optional = true }
iceberg-catalog-rest = { version = "0.9", optional = true }
object_store = { version = "0.10", optional = true, features = ["aws"] }

# Static linking to duckdb is tooooo slow!
# DuckDB: keep dynamic linking.
# Do NOT enable `bundled`/static linking here; this repo expects libduckdb artifacts
# (e.g. Dockerfile copies `libduckdb.so`) and local builds use DUCKDB_DOWNLOAD_LIB=1.
duckdb = { version = "1.10502.0" }

# Configuration YAML
serde_yaml = "0.9"

# Arrow and Parquet (aligned with iceberg; duckdb may still pull a newer arrow internally)
arrow = "57"
parquet = { version = "57", features = ["zstd"] }

# Compression
zstd = "0.13"

# Configuration
config = "0.14"
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Utils
rand = "0.8"
dashmap = "5.5"
once_cell = "1.19"
hex = "0.4"
base64 = "0.22"
flate2 = "1.0"

# HTTP client (auth service)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# Redis session store
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# Axum middleware / extractors
http = "1"
http-body-util = "0.1"
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.10"
axum-test = "15.7"
serde_json = "1.0"
tower = "0.5"
hyper = "1.0"

[lib]
name = "softprobe_runtime"
path = "src/lib.rs"

[[bin]]
name = "softprobe-runtime"
path = "src/main.rs"

[[bin]]
name = "perf_stress"
path = "src/bin/perf_stress.rs"

[profile.release]
opt-level = 2
lto = "off"
codegen-units = 16
debug = false
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true

[features]
default = ["iceberg_catalog"]
iceberg_catalog = ["iceberg", "iceberg-catalog-rest", "object_store"]
# REST catalog + MinIO + full ingest/query integration tests (run in CI or with local stack on :8181)
integration-e2e = []

